[package]
name = "demo_bevy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
transport = ["bevy_renet/transport"]

[dependencies]
bevy = { version = "0.13.0" }
bevy_kira_audio = "0.19.0"
lazy_static = "1.4.0"
#, default-features = false, features = [
#"bevy_core_pipeline",
#"bevy_sprite",
#"bevy_render",
#"bevy_asset",
#"bevy_pbr",
#"x11",
#"tonemapping_luts",
#"ktx2",
#"zstd",
#]

bevy_renet =   {version= "0.0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
fastrand = "2.0"
rand = "0.8.5"
